# rust-discord-bot

./: .gitignore  Cargo.toml  LICENSE.md  README.md  wrangler.toml
src/: bot.rs  command.rs  embed.rs  error.rs  http.rs  interaction.rs  lib.rs  utils.rs  verification.rs
src/commands/: hello.rs
