[package]
name = "rust-discord-bot"
version = "0.1.0"
authors = ["mcdallas <mcdallas@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
serde_repr = "0.1"
thiserror = "1.0"
ed25519-dalek = "1.0.1"
hex = "0.4.2"
reqwest = "0.11.11"
async-trait = "0.1.57"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

